assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* General Styling */
* {
    margin: 0 auto;
    padding: 0;
}

html, 
body {
    height: 100%;
    background-color: #F3F3F3;
    font-family: "Roboto", sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Asap", sans-serif;
    font-size: 1em;
    font-weight: 700;
} 

.green-hr {
    border: 2px solid #a3dcbe  ;
    border-radius: 15px;
    width: 66%;
    margin-left: auto;
    margin-right: auto;
}

/*Navbar Styling */
.site-logo {
    color: #a3dcbe   ;
    font-size: 3em;
    font-weight: 800;
    margin-left: 5vw;
    margin-top: 0.5em
}

a:hover {
    text-decoration: none;
    color: #a3dcbe;
}
/*Z-index is 1 to have breathe icon visible on hero-image */
.nav-container {
    position: absolute;
    top: 0;
    left: 0;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
}
.navbar {
    margin-bottom: 0;
    border: 0;
    width: 100%;
}
.navbar-fixed-top .breathe-navbar {
    background-color: transparent ;
    border: none;
    overflow: hidden;
}

/*Style Hero-Image to fill entire 100vh */
.hero-image {
    background: url("../images/hero-image/hero-image.jpg") no-repeat bottom left fixed;  
    height: 100vh;
    width: 100%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    background-size: cover;
    overflow: hidden;
    z-index: 0;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}
/* Create dark overlay for hero-image*/
.dark-overlay {
    background-image: linear-gradient(268deg, rgba(0, 0, 0, 0.3) 20%, rgba(0, 0, 0, 0.6) 90%);
    position: absolute;
    height: 100vh;
    width: 100%;
    inset: 0px;
    z-index: -1;
    display: flex;
}

.jumbotron {
    background-color: transparent;
    position: relative;
    display: flex;
    align-items: center;
}

.jumbotron-text {
    color: #F3F3F3 ;
    font-weight: 600;
    font-size: 2em;
}
/*Styling jumbotron button */
.jumbotron-btn {
    width: fit-content;
    display: flex;
    justify-content: center;
    padding-top: 4px;
    margin: 0 auto;
    font-size: 1.5em;
    color: #F3F3F3;
    background-color: transparent ;
    border: 2px solid #F3F3F3;
    border-radius: 12px;
    transition-duration: 0.4s;
}

.jumbotron-btn:hover {
    color: #a3dcbe  ;
    background-color: transparent ;
    border: 2px solid #a3dcbe;
}

/* Techniques section */ 
.breathing-technique-info {
    width: 80%;
    margin: 0 auto;
}
.breathing-technique-h1 {
    margin-bottom: 1em;
    font-size: 2em;
}

.breathing-technique-h2 {
    font-size: 1.5em;
}

.breathing-icon {
    font-size: 1.5em;
    color: #a3dcbe ;
}

.breathing-technique-container {
    margin-bottom: 2em;
}

.techniques-img {
    border-radius: 50%;
    padding-bottom: 1em;
}

/* Footer */
.footer-container {
    display: flex;
    justify-content: center;
    align-items: center;
}
footer {
    background-color: #202020 ;
}

.list-group-item {
    border: none;
    font-size: 2em;
    display: inline-block;
    background-color: #202020 ;
}
.list-group-item a {
    color: #DADED4 ;
}
.list-group-item a:hover {
    color: #a3dcbe ;
}

/*Styling the Modal components*/
.modal-header {
    padding: 1em;
    margin-right: 1em;
    border: none;
}
.modal-footer {
    border-top: 1px solid #3C403D;
}

.modal-btn {
    background-color: #3C403D;
    color: #F3F3F3;
    transition-duration: 0.4s;
    padding: 2px 10px;
    border-radius: 12px;
    border: none;
}

.breathe-modal {
    width: fit-content;
}

.breathe-modal-body {
    border-top: #3C403D ;
}
.modal-body-1, .modal-body-2 {
    width: 66%;
}

/* Custom styling on slider in modal */
.slider-range {
    width: 100%;
    -webkit-appearance: none;
    background: #3C403D;
    border-radius: 12px;
    box-shadow: 0px 1px 10px 1px black;
}

.slider-range::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    height: 25px;
    width: 25px;
    background: #F3F3F3;
    border-radius: 50%;
    cursor: pointer;
}
.radio-inline {
    width: 100%;
}

.modal-dialog {
    display: flex;
    justify-content: center;
    align-items: center;
}

.close {
    color: #3C403D;
}
.close:hover{
    color: #3C403D ;
}

/*breathe circle*/
/*Keeps circle as the same size even in fullscreen */
#breathe-timer {
    height: 100%;
    width: 100%;
    overflow:hidden;
}

.breathe-timer {
    margin: 50px auto;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 60%;
}

/*Style circle and organize circle content*/
.breathe-circle {
    height: 25em;
    width: 25em;
    background-color: #a3dcbe   ;
    border: 4px solid #202020;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
}

.inhale-exhale, .countdown-seconds {
    font-size: 2em;
    font-weight: 600;
    color: #202020 ;
}

.settings-btn {
    background-color: #a3dcbe ;
    border-radius: 12px;
    
}

.circle-btn {
    border:none;
    background-color: #a3dcbe;
    font-size: 1.5em;
}

